--- a/app/src/main/res/layout/btdevice_list_item.xml
+++ b/app/src/main/res/layout/btdevice_list_item.xml
@@ -16,15 +16,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="탐색된 기기의 이름"
-            android:textSize="17sp"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:textSize="17sp" />
 
         <TextView
-            android:layout_marginTop="5dp"
             android:id="@+id/deviceAddressTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="탐색된 기기의 주소"/>
+            android:layout_marginTop="5dp"
+            android:text="탐색된 기기의 주소" />
 
     </LinearLayout>
 
